# LoyaltyPointsCrypto

./: .gitignore  Cargo.toml  Dockerfile  README.md  data.txt  data_client.txt  data_server.txt  docker-compose.yml  license.txt  pyproject.toml  results_client.txt  results_server.txt  server_data.txt  server_results_semihonest_settling.txt
python/crypto/: __init__.py  benchmarks.py  benchmarks_updated.py  crypto.py
src/: crypto.rs  lib.rs  main.rs
src/lib/: crypto.rs  mod.rs
src/lib_mal/: crypto.rs  mod.rs
src/lib_old/: mod.rs
src/lib_sh/: crypto_sh.rs  mod.rs
src/lib_sh_swap_only/: mod.rs
