[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = "3"
rand_core = "0.5"
sha2 = "0.9"
hex = "0.4.3"

[dependencies.pyo3]
version = "0.18.3"
features = ["abi3-py37"]
