[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = "3"
rand = "0.8.5"
rand_core = "0.5"
sha2 = "0.9"
rs_merkle = "1.1.0"
bincode = "1.3.3"
serde = "1.0"
serde_derive = "1.0"